--- a/src/css/components/picker.css
+++ b/src/css/components/picker.css
@@ -100,4 +100,8 @@
   .picker-column + .picker-column {
     border-left-color: ButtonText;
   }
+  .picker-column:focus-visible {
+    outline: 2px solid Highlight;
+    outline-offset: -2px;
+  }
 }
