--- a/src/css/components/toolbar.css
+++ b/src/css/components/toolbar.css
@@ -143,6 +143,7 @@
     border: 1px solid ButtonText;
     & > button,
     & > a {
+      color: ButtonText;
       &:hover,
       &:active {
         background: Highlight;
